# guowang

./: .gitignore  AcquisitionThread.cpp  AcquisitionThread.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  Common.cpp  Common.h  ControlThread.cpp  ControlThread.h  DetectThread.cpp  Fps.cpp  Fps.h  GlobalVariable.cpp  GlobalVariable.h  ImageViewer.cpp  ImageViewer.h  StdAfx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: confusion_matrix_normalized.csv  test_dataset.csv
data/yolo/: classes.txt  rev_map.json
include/: DxImageProc.h  GxEx.h  Hc_Modbus_Api.h  Include.h  ModbusTcpAPI.h  StopWatch.h  config.hpp  detectSection.hpp  detectStream.hpp  detectorInterface.h  stampStringMatcher.h  testUtils.hpp  threadPool.hpp  timeUtil.hpp
include/onnxDetector/paddle/: paddleOnnxDetector.hpp  paddleTextCls.h  paddleTextDet.h  paddleTextRec.h
include/onnxDetector/yolo/: yolo.h  yoloOnnx.h  yoloOnnxDetector.hpp  yoloUtils.h
lib/: DxImageProc.lib  GxIAPI.lib  ModbusTcpAPI.lib  StandardModbusApi.lib  onnxruntime.lib  onnxruntime_providers_cuda.lib  onnxruntime_providers_shared.lib  onnxruntime_providers_tensorrt.lib
src/: jsoncpp.cpp  paddleTextCls.cpp  paddleTextDet.cpp  paddleTextRec.cpp  stampStringMatcher.cpp  yolo.cpp  yoloOnnx.cpp  yoloUtils.cpp
